Fixes
* Fixed a bug where the OpenGraph url-validation would block the thread
due to too high complexity
* Fixed the front-end url regex in the same way
* Fixed a problem where the host of an email server might be crawled as
a domain by OpenGraph
* Minor frontend design improvements

--- a/web/css/chat.css
+++ b/web/css/chat.css
@@ -1373,7 +1373,7 @@ html {
 
 /* SMALL SCREENS */
 
-@media (max-width: 600px) {
+@media (max-width: 725px) {
   /* SIDEBAR */
   .sidebar {
     /*WIP*/
